--- a/gpx-parser/Makefile
+++ b/gpx-parser/Makefile
@@ -1,7 +1,7 @@
 
 XSD := gpx1_1.xsd
 GPX := test.gpx
-PARSER_GENERATOR := gpx-parser-generator.rb
+PARSER_GENERATOR := xsd2ruby-parser.rb
 PARSER := gpx-parser.rb
 PARSER_OUT := gpx_parser_out.txt
 
