Improved unit tests

--- a/gps_touring/test/Makefile
+++ b/gps_touring/test/Makefile
@@ -1,6 +1,12 @@
-
 .PHONY: all
 
 RUBY := ruby -I ../lib
 all:
 	$(RUBY) all-tests.rb
+
+# Run a single test (e.g. basic-network.rb) like this:
+#
+#   make test=basic-network one
+#
+one:
+	$(RUBY) $(test).rb
